2009-12-10  Eric Z. Ayers  <zundel@google.com>

        Reviewed by Pavel Feldman.

        Implements displayWebView() to force an invalidation and repaint.
        This fixes a problem running the timeline-paint.html unit test.

        https://bugs.webkit.org/show_bug.cgi?id=31729

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (displayWebView):

2009-12-10  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Convert more commands to StepSequences
        https://bugs.webkit.org/show_bug.cgi?id=32362

        We should eventually convert all the commands, but I'm starting with
        the easy ones.

        * Scripts/modules/commands/download.py:

2009-12-10  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Jan Alonzo.

        [GTK] editing/selection/shrink-selection-after-shift-pagedown.html failing
        https://bugs.webkit.org/show_bug.cgi?id=31103

        Give focus to the webviews when we create them, since some tests expect this.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (main):

2009-12-10  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        bugzilla-tool "builders are red" error should tell you which builders
        https://bugs.webkit.org/show_bug.cgi?id=32211

        * Scripts/modules/buildsteps.py:

2009-12-09  Marwan Al Jubeh  <marwan.aljubeh@gmail.com>

        Reviewed by Adam Roben.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=31228
        Set the WebKitOutputDir, WebKitLibrariesDir and Cygwin environment variables automatically
        in Windows as part of running update_webkit.

        * Scripts/update-webkit:
         - Run setupAppleWinEnv() on Apple's Windows port.
        * Scripts/webkitdirs.pm:
         - Added functions that return the source directory, libraries directory and default build directory on Windows.
         - Added isWindowsNT() which tests if the current Windows version is from the Windows NT family.